# ructf-finals-2023

./: .gitmodules  LICENSE  README.md
.github/workflows/: check_bookster.yml  check_dcs.yml  check_example.yml  check_hermicache.yml  check_lost-museum.yml  check_lost_museum.yml  check_museumorphosis.yml  check_scp.yml  check_sneakers.yml  check_solaris.yml  check_stalker.yml  deploy_checkers.yml  generate_workflows.py  rebuild_image.yml  reset_game.yml
ansible/: cs-checkers.yml  cs-deploy.yml  cs-init.yml  cs-static-fetch.yml  inventory.cfg  vpn.yaml
ansible/.keys/: cs_key  cs_key.pub
ansible/cloud/: README.md  cloud_master.yaml  init_cloud.sh  inventory.cfg
ansible/cs/: ansible.cfg  cs-checkers.yml  cs-deploy.yml  cs-static-fetch.yml  inventory.cfg
ansible/group_vars/: all
ansible/vpn/: README.md  ansible.cfg  init_vpn.sh  inventory.cfg
checkers/: install_checker_requirements.sh
checkers/bookster/: .gitattributes  answers.csv  api.py  bookster.checker.py  bulgakov.txt  generate_answer.py  generate_data.py  requirements.txt  utils.py
checkers/dcs/: api.py  dcs.checker.py  dcs_test_generator  run.sh
checkers/example/: checker.py  example.checker.py
checkers/firelord/: client.py  firelord.checker.py
checkers/hermicache/: api.py  compute.py  generators.py  hermicache.checker.py  models.py  requirements.txt
checkers/lost-museum/: api.py  lost-museum.checker.py  requirements.txt
checkers/lost_museum/: api.py  consts.py  lost-museum.checker.py  lost_museum.checker.py
checkers/museumorphosis/: client.py  data.json  data_generator.py  models.py  museumorphosis.checker.py  requirements.txt  utils.py
checkers/scp/: scp.checker.py
checkers/sneakers/: client.py  models.py  requirements.txt  skeakers.checker.py  sneakers.checker.py  utils.py
checkers/solaris/: model.py  solaris.checker.py
checkers/stalker/: client.py  model.py  stalker.checker.py
internal/dcs/back/: CMakeLists.txt  README.md
internal/dcs/back/common/: CMakeLists.txt
internal/dcs/back/common/include/utils/files/: files.h
internal/dcs/back/common/include/utils/process/: process.h
internal/dcs/back/common/include/utils/strings/: strings.h
internal/dcs/back/common/src/utils/files/: files.cpp
internal/dcs/back/common/src/utils/process/: process.cpp
internal/dcs/back/lang/: CMakeLists.txt
internal/dcs/back/lang/include/ast/: ast.h
internal/dcs/back/lang/include/compiler/: compiler.h
internal/dcs/back/lang/include/parser/: parser.h
internal/dcs/back/lang/src/: main.cpp
internal/dcs/back/lang/src/compiler/: compiler.cpp
internal/dcs/back/lang/src/lexer/: lexer.cpp
internal/dcs/back/lang/src/parser/: parser.cpp
internal/dcs/back/lang/src/translator/: translator.cpp
internal/dcs/back/lang/tests/: functional_tests.cpp  main.cpp  performance_tests.cpp
internal/dcs/back/lang/tests/compiler/: compiler_tests.cpp
internal/dcs/back/lang/tests/lexer/: lexer_tests.cpp
internal/dcs/back/lang/tests/parser/: parser_tests.cpp
internal/dcs/back/server/: CMakeLists.txt
internal/dcs/back/server/include/config/: config.h
internal/dcs/back/server/include/options/: options.h
internal/dcs/back/server/include/playground/: executor.h
internal/dcs/back/server/include/storage/: storage.h
internal/dcs/back/server/src/: main.cpp
internal/dcs/back/server/src/config/: config.cpp
internal/dcs/back/server/src/options/: options.cpp
internal/dcs/back/server/src/playground/: executor.cpp
internal/dcs/back/server/src/storage/: storage.cpp
internal/dcs/back/server/src/test_generator/: main.cpp
internal/dcs/back/server/tests/playground/: executor_tests.cpp
internal/dcs/back/server/tests/storage/: storage_tests.cpp
internal/scp/: .gitignore  Dockerfile  docker-compose.yml  pom.xml
services/booksrter/: .gitattributes  .gitignore  Dockerfile  docker-compose.yml  nginx-entrypoint.sh  nginx.Dockerfile  requirements.txt
services/bookster/: .env  .gitignore  (+5 more)
services/dcs/back/: CMakeLists.txt  Dockerfile  README.md  dcsserver
services/dcs/back/client/: CMakeLists.txt
services/dcs/back/client/src/: main.cpp
services/dcs/back/common/: CMakeLists.txt
services/dcs/back/common/include/utils/strings/: strings.h
services/dcs/back/common/src/utils/strings/: strings.cpp
services/dcs/back/lang/: CMakeLists.txt
services/dcs/back/lang/include/lexer/: lexer.h
services/dcs/back/lang/src/ast/: ast.cpp
services/dcs/back/lang/src/compiler/: compiler.cpp
services/dcs/back/lang/src/parser/: parser.cpp
services/dcs/back/lang/tests/: functional_tests.cpp
services/dcs/back/lang/tests/compiler/: compiler_tests.cpp
services/dcs/back/lang/tests/parser/: parser_tests.cpp
services/dcs/back/server/: CMakeLists.txt
services/dcs/back/server/include/config/: config.h
services/dcs/back/server/src/: main.cpp
services/dcs/back/server/src/options/: options.cpp
services/dcs/back/server/src/playground/: executor.cpp
services/dcs/back/server/src/storage/: storage.cpp
services/dcs/back/server/tests/storage/: storage_tests.cpp
services/dcs/back/src/: ast.cpp  ast.h  compiler.cpp  compiler.h  compiler_tests.cpp  dcs.g4  functional_tests.cpp  lexer.cpp  lexer_tests.cpp  main.cpp  parser.cpp  parser_tests.cpp  utils.h
services/dcs/back/src/ast/: ast.cpp  ast.h
services/dcs/back/src/compiler/: ast.cpp  compiler.cpp  compiler.h  dcs.g4  lexer.cpp  lexer.h  parser.cpp  parser.h  translator.cpp  translator.h
services/dcs/back/src/parser/: dcs.txt  lexer.cpp  lexer.h  parser.cpp  parser.h
services/dcs/back/src/storage/: storage.cpp  storage.h
services/dcs/back/src/tests/: compiler_tests.cpp  functional_tests.cpp  lexer_tests.cpp  parser_tests.cpp  storage_tests.cpp
services/dcs/back/src/utils/: defer.h  utils.cpp  utils.h
terraform/: .gitignore  cloud.tf  cs.tf  firewall.tf  floating_ip.tf  gh_workflow.tf  network.tf  outputs.tf  provider.tf  ssh_keys.tf  variables.tf  vpn.tf
tools/: check-sploit.py  check-sploit.sh
vuln_image/: README.md  digital_ocean_specific_setup.sh  image.pkr.hcl
workflows/: check_example.yml  deploy_checkers.yml  generate_workflows.py
(+21359 files in other folders)
